web/css/reset.css
a,
abbr,
acronym,
address,
applet,
article,
aside,
audio,
b,
big,
blockquote,
body,
canvas,
caption,
center,
cite,
code,
dd,
del,
details,
dfn,
div,
dl,
dt,
em,
embed,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
html,
i,
iframe,
img,
ins,
kbd,
label,
legend,
li,
mark,
menu,
nav,
object,
ol,
output,
p,
pre,
q,
ruby,
s,
samp,
section,
small,
span,
strike,
strong,
sub,
summary,
sup,
table,
tbody,
td,
tfoot,
th,
thead,
time,
tr,
tt,
u,
ul,
var,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

/* This needs reworked */
body,
div,
h1,
h2,
h3,
h4,
h5,
h6,
html,
li,
p,
ul {
  font: 400 13px/13px 'Open Sans', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6,
li,
p,
ul {
  letter-spacing: 0.3px;
}

body,
html {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
  min-width: 320px;
  background: #000;
}

nav ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote::after,
blockquote::before,
q::after,
q::before {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

*:focus,
button:focus {
  outline: 0;
}

#info_drop {
  border: none;
  margin: 0;
}

#info_drop div.hidden a {
  display: block;
  color: #fff;
  font-weight: 100;
  line-height: 1em;
  font-size: 11px;
  width: 70px;
  padding: 2px 5px;
  text-align: right;
  text-decoration: none;
}

#info_drop div.hidden a:hover {
  background: rgba(38, 43, 49, 0.45);
}

#info_drop:hover div.hidden {
  display: block;
  background: rgba(38, 43, 49, 0.45);
  width: 80px;
  margin-left: -40px;
  margin-top: 2px;
}

#info {
  display: block;
  width: 40px;
  height: 40px;
  border: none;
}

div.horizontalContainer {
  width: 100%;
  display: block;
  float: left;
  position: absolute;
  bottom: 10px;
  overflow: hidden;
  z-index: 200;
  padding: 0;
}

.hidden {
  display: none;
}

#banner {
  display: block;
  z-index: 294;
  float: left;
  position: relative;
  width: 100%;
  height: 45px;
}

#banner img.logo {
  padding: 11px 5px;
}

#banner ul {
  float: right;
}

#banner ul li {
  display: block;
  float: right;
  margin: 3px;
  line-height: 0;
}

#banner ul li div {
  line-height: 0;
}

#banner .toolbar-link {
  display: inline-block;
  line-height: 0;
}

#hazard,
#transition {
  z-index: 1007;
  clear: both;
  float: left;
  display: block;
  position: relative;
}

#transition {
  width: 22%;
  height: 100px;
  text-shadow: none;
  color: #262626;
  margin-top: 55px;
}

#hazard {
  top: -13px;
}

#dlMap {
  position: absolute !important;
  left: 0;
  top: 0;
  background-color: #00f;
  opacity: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  overflow: hidden;
}

#rubberband {
  position: absolute !important;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -3;
  display: none;
  overflow: hidden;
}

#imagedownload {
  z-index: 1005;
  width: 180px;
  min-height: 100px;
  position: absolute;
  display: none;
  background: rgba(38, 43, 49, 0.45);
  text-shadow: none;
  color: #fff;
  float: left;
  font-size: 11px;
  text-align: left;
  top: 44px;
  padding: 5px;
  border-radius: 0 0 5px 5px;
}

#imgFileSize {
  color: #d99694;
}

#transition ul {
  font: 10px 'Open Sans', sans-serif;
  text-align: center;
}

#transition ul li,
#transition ul li.disabled,
#transition ul li.disabled:hover {
  background-color: rgb(76, 89, 92);
  border-color: rgb(112, 135, 136);
  border-width: 1px;
}

#transition ul li.selected {
  background-color: rgb(152, 72, 7);
  border-color: rgb(250, 192, 144);
}

#transition ul li:hover {
  border-color: #ff0;
}

#wv-logo {
  background: url('../brand/images/wv-logo.svg?v=@BUILD_NONCE@') no-repeat center rgba(40, 40, 40, 0.85);
  display: block;
  width: 286px;
  height: 55px;
  padding: 5px 0;
  position: absolute;
  top: 10px;
  left: 10px;
  border: 1px solid #333;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  z-index: 1;
  -webkit-box-sizing: border-box;
  -o-box-sizing: border-box;
  box-sizing: border-box;
}

